--- a/index/mainfiles/index.html
+++ b/index/mainfiles/index.html
@@ -19,6 +19,9 @@
         </div>
     </header>
     <main class="container">
+        <div class="comportamentoSlideShow">
+            <img src="img/logoGames.webp" alt="Imagens de Jogos" class="imagensJogos">
+        </div>
 
     </main>
     <footer class="rodape">
