Adicionando mais elementos e Trocando alguns displays enquanto aprendo ainda mais

--- a/index/mainfiles/index.html
+++ b/index/mainfiles/index.html
@@ -20,7 +20,10 @@
     </header>
     <main class="container">
         <div class="comportamentoSlideShow">
-            <img src="img/logoGames.webp" alt="Imagens de Jogos" class="imagensJogos">
+            <div class="conteudoSlideShow"><img src="img/logoGames.webp" alt="Imagens de Jogos" class="imagensJogos"></div>
+            <div class="conteudoSlideShow"><img src="img/logoGames.webp" alt="Imagens de Jogos" class="imagensJogos"></div>
+            <div class="conteudoSlideShow"><img src="img/logoGames.webp" alt="Imagens de Jogos" class="imagensJogos"></div>
+            <div class="conteudoSlideShow"><img src="img/logoGames.webp" alt="Imagens de Jogos" class="imagensJogos"></div>
         </div>
 
     </main>
