Adicionando tela de cadastro basica e navegacao Basica

--- a/index/mainfiles/pages/cadastro.html
+++ b/index/mainfiles/pages/cadastro.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>GameLibrary</title>
+    <link rel="stylesheet" href="/index/mainfiles/index.css">
+    <link rel="stylesheet" href="/index/mainfiles/css/reset.css">
+    <link rel="stylesheet" href="/index/mainfiles/css/cadastro.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <body class="container">
+        <div class="cadastro">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="Digite seu Email aqui">
+                <label for="password">Senha</label>
+                <input type="password" name="password" id="senha" placeholder="Digite sua Senha">
+                <button id="botao">Entrar</button>
+
+            <a href="alias">Cadastre-se Aqui</a>
+        </div>
+    </body>
+    <footer>
+
+    </footer>
+
+    <script src="/index/mainfiles/script/cadastro.js"></script>
 </body>
 </html>
